--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-boilerplate",
+  "name": "react-starter",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --hot --history-api-fallback --open",
@@ -23,7 +23,6 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
@@ -47,13 +46,7 @@
   },
   "babel": {
     "presets": [
-      [
-        "es2015",
-        {
-          "modules": false
-        }
-      ],
-      "stage-2",
+      "es2015",
       "react"
     ],
     "plugins": [
@@ -75,11 +68,8 @@
         "error",
         {
           "devDependencies": [
-            "webpack.config.js",
-            "webpack.config.prod.js",
-            "**/src/index.jsx"
-          ],
-          "optionalDependencies": false
+            "webpack.*.js"
+          ]
         }
       ]
     }
